--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "# define function here\n",
+    "def number_of_des"
    ]
   },
   {
