--- a/index.ipynb
+++ b/index.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
     "def number_of_destinations():\n",
-    "    "
+    "    return len(travel_destinations)"
    ]
   },
   {
