--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# define function here\n",
     "def next_up():\n",
-    "    "
+    "    return list_of_destinations[0]"
    ]
   },
   {
