automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,8 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "def favor"
+    "def favorite_destination():\n",
+    "    return "
    ]
   },
   {
