automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,13 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define function here\n",
     "def favorite_destination():\n",
-    "    return "
+    "    return 'Madagascar'"
    ]
   },
   {
