automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,22 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'madagascar'"
+       "'Madagascar'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# favorite_destination() # 'madagascar'"
+    "favorite_destination() # 'madagascar'"
    ]
   },
   {
